--- a/TestMyDrawing/Properties/Resources.resx
+++ b/TestMyDrawing/Properties/Resources.resx
@@ -223,4 +223,7 @@
   <data name="icons8_text_30px_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8_text_30px_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pcb_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pcb_disable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
